--- a/now.json
+++ b/now.json
@@ -4,7 +4,10 @@
     {
       "src": "*.php",
       "use": "@now/php"
-    }
+    },
+    { "src": "app.js", "use": "@now/static" },
+    { "src": "jquery-3.3.1.slim.min.jsl", "use": "@now/static" },
+    { "src": "qrcode.js", "use": "@now/static" }
   ],
   "name": "php"
 }
